Bug 49940 - FILEOPEN docx import doesn't handle title pages with continous section break
Summary: FILEOPEN docx import doesn't handle title pages with continous section break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.6.0 target:3.5.4
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 23:52 UTC by Miklos Vajna
Modified: 2012-05-15 01:49 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer. (9.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-05-14 23:52 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2012-05-14 23:52:54 UTC
Created attachment 61667 [details]
Reproducer.

Sample attached.
Comment 1 Not Assigned 2012-05-15 00:03:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50cb1667020494906afaacb68d4163d1eda527cf

fdo#49940 dmapper: handle m_bTitlePage when m_nBreakType is zero
Comment 2 Miklos Vajna 2012-05-15 01:42:37 UTC
Resolved in master.
Comment 3 Not Assigned 2012-05-15 01:43:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=163e136650adba01382ec47e017d4b426aa49112

fdo#49940 testcase
Comment 4 Not Assigned 2012-05-15 01:49:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a241d12017d6d6c82427c0d84309e44b7a306ad&g=libreoffice-3-5

fdo#49940 dmapper: handle m_bTitlePage when m_nBreakType is zero


It will be available in LibreOffice 3.5.4.